ver 0.3.2
- Added options for exit code.
- Added predefined ids for "%" and the executable directory.
- Fixed an error when the current directory is not the same as the executable directory. (on Windows)

ver 0.3.1
- Added number pickers to GUI components.
- Fixed a bug that it can't open files on macOS.
- Error messages became more detailed when failed to parse json file.
- Refined codes.

ver 0.3.0
- Added "file" type to help menu.
- Added "tooltip" option to all components.
- Added options to check tool version.
- Supported alternate spellings for some json keys and values.
- Fixed a bug that error dialog can't show non-ascii characters.
- Updated wxWidgets to v3.2.2
- Removed more codes from wxWidgets to reduce the binary size.
- Refined codes.

ver 0.2.3
- Fixed errors when using non-ascii characters in labels.
- Fixed an error when a command requires more components for arguments.
- Fixed some examples that will raise the command error.
- Fixed an error when executing the default command.
- Used hash instead of label in gui_config.json
- Removed unnecessary codes from wxWidgets to reduce the binary size.

ver 0.2.2
- Added "id" option to all components.
  (It'll be used as a variable name for the command and gui_config.json)
- Improved json validator

ver0.2.1
- Introduced wxBoxSizer to align components automatically.
- Added "default" option to all components.
- Fixed a bug that non-ascii characters won't be shown up as "empty_message." (Windows)
- Fixed a bug that LogFrame can't catch non-ascii characters from std::cout. (Linux)
- Fixed an error when executing non-ascii commands. (Unix)
- Fixed an error when saving non-ascii characters for text box.

ver0.2.0
- Made "button" key optional
- Fixed a bug that text boxes can't handle their input values properly.
- Modified window size for macOS
- Removed null values from gui_config.json
- Introduced tests and linting

ver0.1.3