@@ -14,21 +14,22 @@ if /I "%~1"=="Debug" (
 ) else (
     set BUILD_TYPE=Release
 )
-echo BUILD_TYPE: %BUILD_TYPE%
+echo Build type: %BUILD_TYPE%
+
+set wxDIR=C:/wxWidgets-%WX_VERSION%/%BUILD_TYPE%/Installed
+echo wxWidgets location: %wxDIR%
 
 set OPTIONS=-G "%GENERATOR%"^
  -A x64^
  -D CMAKE_CONFIGURATION_TYPES=%BUILD_TYPE%^
- -D wxWidgets_ROOT_DIR=C:/wxWidgets-%WX_VERSION%/%BUILD_TYPE%/Installed
+ -D wxWidgets_ROOT_DIR=%wxDIR%
 
-set WXRC_CMD=C:/wxWidgets-%WX_VERSION%/%BUILD_TYPE%/Installed/bin/wxrc.exe
+set WXRC_CMD=wxDIR/bin/wxrc.exe
 
 mkdir %~dp0\..\%BUILD_TYPE%
 @pushd %~dp0\..\%BUILD_TYPE%
     if "%BUILD_TYPE%"=="Release" (
-        set OPTIONS=%OPTIONS% -D CMAKE_MSVC_RUNTIME_LIBRARY=MultiThreaded -D wxWidgets_CONFIGURATION=mswu
-    ) else (
-        set OPTIONS=%OPTIONS% -D wxWidgets_CONFIGURATION=mswud
+        set OPTIONS=%OPTIONS% -D CMAKE_MSVC_RUNTIME_LIBRARY=MultiThreaded
     )
     echo CMake arguments: %OPTIONS%
     cmake %OPTIONS% ../
