@@ -14,15 +14,22 @@ if /I "%~1"=="Debug" (
 ) else (
     set BUILD_TYPE=Release
 )
-echo BUILD_TYPE: %BUILD_TYPE%
+echo Build type: %BUILD_TYPE%
 
-REM Options are defined in wxWidgets/build/cmake/options.cmake
-set OPTIONS=-G "%GENERATOR%"^
+set INSTALL_DIR=C:/wxWidgets-%WX_VERSION%/%BUILD_TYPE%/Installed
+echo Install dir: %INSTALL_DIR%
+
+set CMAKE_OPTIONS=^
+ -G "%GENERATOR%"^
  -A x64^
  -D CMAKE_CONFIGURATION_TYPES=%BUILD_TYPE%^
- -D CMAKE_INSTALL_PREFIX=C:/wxWidgets-%WX_VERSION%/%BUILD_TYPE%/Installed^
+ -D CMAKE_INSTALL_PREFIX=%INSTALL_DIR%
+
+REM Defined in wxWidgets/build/cmake/options.cmake
+set wxOPTIONS=^
  -D wxBUILD_COMPATIBILITY=3.1^
  -D wxBUILD_SHARED=OFF^
+ -D wxUSE_NO_RTTI=ON^
  -D wxUSE_REGEX=OFF^
  -D wxUSE_ZLIB=OFF^
  -D wxUSE_EXPAT=OFF^
@@ -32,11 +39,16 @@ set OPTIONS=-G "%GENERATOR%"^
  -D wxUSE_NANOSVG=OFF^
  -D wxUSE_LIBLZMA=OFF^
  -D wxUSE_OPENGL=OFF^
+ -D wxUSE_ARCHIVE_STREAMS=OFF^
  -D wxUSE_CMDLINE_PARSER=OFF^
+ -D wxUSE_DEBUGREPORT=OFF^
+ -D wxUSE_DIALUP_MANAGER=OFF^
  -D wxUSE_FILE_HISTORY=OFF^
  -D wxUSE_FONTENUM=OFF^
  -D wxUSE_FONTMAP=OFF^
+ -D wxUSE_FS_ARCHIVE=OFF^
  -D wxUSE_FS_INET=OFF^
+ -D wxUSE_FS_ZIP=OFF^
  -D wxUSE_FSWATCHER=OFF^
  -D wxUSE_MIMETYPE=OFF^
  -D wxUSE_PRINTF_POS_PARAMS=OFF^
@@ -47,6 +59,7 @@ set OPTIONS=-G "%GENERATOR%"^
  -D wxUSE_TARSTREAM=OFF^
  -D wxUSE_WEBREQUEST=OFF^
  -D wxUSE_ZIPSTREAM=OFF^
+ -D wxUSE_DBGHELP=OFF^
  -D wxUSE_DOC_VIEW_ARCHITECTURE=OFF^
  -D wxUSE_HELP=OFF^
  -D wxUSE_MS_HTML_HELP=OFF^
@@ -70,6 +83,7 @@ set OPTIONS=-G "%GENERATOR%"^
  -D wxUSE_PRINTING_ARCHITECTURE=OFF^
  -D wxUSE_SVG=OFF^
  -D wxUSE_WEBVIEW=OFF^
+ -D wxUSE_GRAPHICS_DIRECT2D=OFF^
  -D wxUSE_ACTIVITYINDICATOR=OFF^
  -D wxUSE_ADDREMOVECTRL=OFF^
  -D wxUSE_ANIMATIONCTRL=OFF^
@@ -132,6 +146,7 @@ set OPTIONS=-G "%GENERATOR%"^
  -D wxUSE_PNM=OFF^
  -D wxUSE_XPM=OFF^
  -D wxUSE_ICO_CUR=OFF^
+ -D wxUSE_CRASHREPORT=OFF^
  -D wxUSE_POSTSCRIPT_ARCHITECTURE_IN_MSW=OFF^
  -D wxUSE_TASKBARICON_BALLOONS=OFF
 
@@ -139,10 +154,11 @@ set OPTIONS=-G "%GENERATOR%"^
     mkdir %BUILD_TYPE%
     cd %BUILD_TYPE%
     if "%BUILD_TYPE%"=="Release" (
-        set OPTIONS=%OPTIONS% -D wxBUILD_USE_STATIC_RUNTIME=ON
+        set CMAKE_OPTIONS=%CMAKE_OPTIONS% -D CMAKE_CXX_FLAGS_RELEASE="/MT /O1 /DNDEBUG"
+        set wxOPTIONS=%wxOPTIONS% -D wxBUILD_USE_STATIC_RUNTIME=ON
     )
-    echo CMake arguments: %OPTIONS%
-    cmake %OPTIONS% ../
+    echo wxOptions: %wxOPTIONS%
+    cmake %CMAKE_OPTIONS%%wxOPTIONS% ../
     cmake --build . --config %BUILD_TYPE%
     cmake --install . --config %BUILD_TYPE%
 @popd
